--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "mavericks-web",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "private": true,
   "dependencies": {
+    "detect-browser": "^2.0.0",
     "firebase": "^4.9.1",
     "freactal": "^2.0.1",
     "js-joda": "^1.6.2",
     "luxon": "^0.4.0",
+    "platform": "^1.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fastclick": "^3.0.2",
@@ -15,6 +17,7 @@
     "react-scripts": "1.1.0",
     "react-social-login-buttons": "^1.3.5",
     "recompose": "^0.26.0",
+    "sweetalert": "^2.1.0",
     "time-js": "0.0.5"
   },
   "scripts": {
@@ -22,5 +25,8 @@
     "build": "REACT_APP_VERSION=$npm_package_version react-scripts build",
     "test": "REACT_APP_VERSION=$npm_package_version react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-browser-support": "0.0.2"
   }
 }
