--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "mavericks-web",
-  "version": "1.0.15",
+  "homepage": "https://mavcuts.com",
+  "version": "2.0.3",
   "private": true,
   "dependencies": {
     "detect-browser": "^2.4.0",
-    "firebase": "^4.13.0",
-    "freactal": "^2.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-react": "^1.1.7",
+    "firebase": "^5.0.2",
+    "firebase-tools": "^3.18.4",
+    "freactal": "^2.0.3",
     "js-joda": "^1.6.2",
+    "lodash-es": "^4.17.10",
     "luxon": "^1.2.0",
     "platform": "^1.3.5",
     "react": "^16.3.2",
@@ -17,7 +23,10 @@
     "react-scripts": "1.1.4",
     "react-social-login-buttons": "^1.3.5",
     "recompose": "^0.27.0",
+    "sillyname": "^0.1.0",
+    "stylelint": "^9.2.0",
     "sweetalert": "^2.1.0",
+    "sweetalert2": "^7.20.1",
     "time-js": "0.0.5"
   },
   "scripts": {
