--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react": "^1.1.7",
-    "firebase": "^5.3.1",
-    "firebase-tools": "^3.19.3",
+    "firebase": "^5.7.1",
+    "firebase-functions": "^2.1.0",
+    "firebase-tools": "^6.2.2",
     "freactal": "^2.0.3",
     "js-joda": "^1.6.2",
     "lodash-es": "^4.17.10",
