--- a/package.json
+++ b/package.json
@@ -4,30 +4,32 @@
   "version": "2.2.0",
   "private": true,
   "dependencies": {
-    "detect-browser": "^2.4.0",
+    "deep-object-diff": "^1.1.0",
+    "detect-browser": "^2.5.1",
     "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-prettier": "^2.10.0",
     "eslint-config-react": "^1.1.7",
-    "firebase": "^5.7.1",
-    "firebase-functions": "^2.1.0",
-    "firebase-tools": "^6.2.2",
+    "firebase": "^5.11.1",
+    "firebase-functions": "^2.3.1",
+    "firebase-tools": "^6.12.0",
     "freactal": "^2.0.3",
-    "js-joda": "^1.6.2",
-    "lodash-es": "^4.17.10",
-    "luxon": "^1.2.0",
+    "js-joda": "^1.11.0",
+    "lodash-es": "^4.17.11",
+    "luxon": "^1.16.0",
+    "object-diff": "0.0.4",
     "platform": "^1.3.5",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-fastclick": "^3.0.2",
-    "react-loading": "^2.0.2",
+    "react-loading": "^2.0.3",
     "react-loading-overlay": "^0.3.0",
     "react-scripts": "1.1.4",
     "react-social-login-buttons": "^1.3.5",
-    "recompose": "^0.27.0",
+    "recompose": "^0.27.1",
     "sillyname": "^0.1.0",
-    "stylelint": "^9.2.0",
-    "sweetalert": "^2.1.0",
-    "sweetalert2": "^7.20.1",
+    "stylelint": "^9.10.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^7.33.1",
     "time-js": "0.0.5"
   },
   "scripts": {
@@ -39,7 +41,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
-    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-flowtype": "^2.50.3",
     "react-browser-support": "0.0.2"
   }
 }
